--- a/_posts/2016-01-31-17_23_22-summary.md
+++ b/_posts/2016-01-31-17_23_22-summary.md
@@ -7,4 +7,14 @@ categories: others
 tags: []
 ---
 
-一些总结哈~
+2015年就这么过去了，回顾一下这一年的历程。
+
+15年上半年把耽搁了很久的驾照考出来了，这大概是最值得庆祝的一件事情，因此导致3~6月份过得特别辛苦，一方面想要早点考出驾照，另外一方面又因为练车而特别疲惫，甚至有所抵触。幸运的是3个月顺利考出了驾照，悲催的是，整个人变得又黑又丑又憔悴。
+
+今年做的主要项目是优乐洗和百世店加，期间完成了beyond的雏形，用了一段时间，最后还是决定向react靠拢，向社区靠拢。beyond已经分拆为两部分 beyond-lib和beyond-control，前者已经开始，并发布了2个更新，版本号到0.6 ，后者还没有开始开始更新，预计会做一次较大的更新，主要是功能的添加，版本计划直接到0.5或者0.6。
+
+百世店加的开发历程，我越发感觉项目管理和采用合适技术的重要性。合适的项目管理可以让整个开发流程顺风顺水，而合适的技术可以让开发效率得到大幅度的提高。不过也是因为之前没有研究透webpack的一些部分，所以导致我还是采用了传统的开发模式，在后期开始处理代码压缩合并替换的时候遇到了很多的问题，我整整耗费了两天的时间写了一个脚本来处理这些，但如果一开始就采用webpack，那么就不会有这个问题，可以节约大部分的时间。
+
+年底开始react的组件化，我设想了好多种组件的方案，目前决定下来的是开发效率最大化，在bootstrap和react-bootstrap的基础上进行二次开发，争取达到可以最快速地使用组件。好争取时间来完成一些其他的东西，多研究一些源代码。下半年前端开始研究react，后来因为中途去做了店加商城的项目，直到11月份react相关的研究才开始有所突破，预计后期的研究点要深入到react的源代码和组件编写规范，现在也是在看bootstrap和一些react组件的源码。react+flue的架构模式可以让前端各异的代码风格问题有所缓解，在可维护性上相当不错。但也并不是万金油，在纯展示性的方面，用jQuery+众多插件依然是不错的方法，目前在我看来，react，包括其他的mvvm框架，使用场景还是在数据驱动的业务场景方面。还没有在移动端方面使用react，这一点在16年有必要去尝试一下。
+
+技术方面，每天都有在不断的学习，每天下班的时候会感觉较前一天有所进步，只是这些进步越来越小，同时也不断感觉到自己在碰壁，瓶颈越来越大，有点无法突破，可能也是跟自己懒了有关系吧。自己也会一直去尽力找寻突破点的。
